--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "remix vite:build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "remix": "^2.16.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
